Upgrade to JDK25